--- a/src/components/Filter/style.css
+++ b/src/components/Filter/style.css
@@ -1,10 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Poppins:wght@300&display=swap');
+
 .searchBox {
+   font-family: 'Poppins', sans-serif;
     display: flex;
     align-items: center;
-    width: 256px;
+    justify-content: space-around;
+    width: 350px;
     margin: 20px auto;
     padding: 8px 20px;
-    background: pink;
+    background: rgb(255, 255, 255);
     box-shadow: 0px 5px 20px rgb(50 57 69 / 25%);
     border-radius: 33px;
 }
@@ -17,7 +22,7 @@
 }
 
 .search_text {
-    color: white;
+    color: #323945;
     background: none;
     border: none;
     font-weight: normal;
@@ -27,7 +32,7 @@
     padding: 5px;
   }
   .search_text::placeholder {
-    color: #ffff;
+    color:#323945;
     text-align: center;
   }
 
@@ -44,4 +49,16 @@
     border-radius: 33px;
     padding: 5px 15px;
     color: #ffff;
+    }
+
+    .containerFilter{
+display: flex;
+flex-direction: column;
+align-items: center;
+font-family: 'JetBrains Mono', monospace;
+font-size: 1rem;
+    }
+
+    .container-title{
+      color:#323945;
     }
