--- a/src/components/Productos/style.css
+++ b/src/components/Productos/style.css
@@ -1,7 +1,8 @@
 .container_products{
+    margin: auto;
     width: 80%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 30px;
     /* background-color: aqua; */
 }
