--- a/src/components/Productos/style.css
+++ b/src/components/Productos/style.css
@@ -1,5 +1,5 @@
 .container_products{
-    margin: auto;
+    margin: 0em 4em;
     width: 80%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
