--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,46 +1,63 @@
-.card{
-    width: 250px;
-    height: 360px;
-    display: flex;
-    padding: 20px 0;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Poppins:wght@300&display=swap');
+
+.card {
+  width: 280px;
+  display: flex;
+  padding: 20px 0;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 0.8em;
+  text-align: center;
 }
 
 .c-Product__info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 10px;
+  gap: 10px;
 }
 
 .c-Product__img {
-    width: 75%;
-    height: 195px;
-    border-radius: 4px;
-    margin-bottom: 5px;
+  width: 75%;
+  height: 195px;
+  border-radius: 4px;
+  margin-bottom: 5px;
 }
 
 .c-Product__name {
-    width: 80%;
-    font-weight: 400;
-    font-size: 1.4rem;
-    text-align: center;
-    margin-bottom: 5px;
+  width: 80%;
+  font-weight: 400;
+  font-size: 1.4rem;
+  text-align: center;
+  margin-bottom: 5px;
 }
 
-.c-Product__price, .c-Product__description{
-    font-weight: 500;
-    font-size: 2rem;
-    text-align: center;
-    color: grey;
-    margin-bottom: 5px;
+.c-Product__price,
+.c-Product__description {
+  font-weight: 500;
+  font-size: 2rem;
+  text-align: center;
+  color: grey;
+  margin-bottom: 5px;
 }
 
-.c-button{
-    width: 40%;
-    padding: 8px 12px;
-    background-color: aqua;
+.c-button {
+  width: 40%;
+  padding: 8px 12px;
+  background-color: aqua;
+}
+
+.buttonSee {
+  background-color: #c242d7;
+  border: none;
+  padding: 8px 15px;
+  font-family: 'Poppins', sans-serif;
+  border-radius: 7px;
+  color: white;
+  font-weight: bold;
 }
